ref_scss: fix width spacing in posts.html.

--- a/_sass/pages/_posts.scss
+++ b/_sass/pages/_posts.scss
@@ -2,16 +2,15 @@
 // scss for posts page
 // 
 
-#posts {
+.posts {
   @include container-narrow;
-  
-  .posts-list {
+
+  &__list {
     padding: $sp-4;
-  
-    .posts-list-item {
-      display: flex; 
-      justify-content: space-between;
-      list-style-type: none !important;
-    }
-  }  
+  }
+
+  &__post {
+    display: flex; 
+    justify-content: space-between;
+  }
 }
